--- a/application/views/scripts/permisos/index.phtml
+++ b/application/views/scripts/permisos/index.phtml
@@ -23,7 +23,7 @@
                 ],
                 iDisplayLength: 10,
                 oLanguage: {
-                    sLengthMenu: "_MENU_ Records per page",
+                    sLengthMenu: "_MENU_ Registros por pagina",
                     sInfo: "_START_ - _END_ of _TOTAL_",
                     sInfoEmpty: "0 - 0 of 0",
                     oPaginate: {
@@ -40,7 +40,6 @@
                   "bSortable": false,
                   "fnRender": function (oObj) {
                      return " <div class='btn-group'>\n\
-                            <a class='btn btn-small show-tooltip' title='View' href='#modal-2' data-toggle='modal' ><i onclick='test1(" + oObj.aData[0] + ")' class='icon-zoom-in'></i></a>\n\
                             <a class='btn btn-small show-tooltip' title='Edit' href='<?php echo $this->baseUrl ?>/permisos/update/rol/" + oObj.aData[0] + "/recurso/"+ oObj.aData[1] +"/permiso/"+ oObj.aData[2] +"'><i class='icon-edit'></i></a>\n\
                             <a class='btn btn-small btn-danger show-tooltip' title='Delete' href='<?php echo $this->baseUrl ?>/permisos/delete/rol/" + oObj.aData[0] + "/recurso/"+ oObj.aData[1] +"/permiso/"+ oObj.aData[2] +"'><i class='icon-trash'></i></a></div>  ";
                    }
@@ -68,8 +67,8 @@
                 <!-- BEGIN Page Title -->
                 <div class="page-title">
                     <div>
-                        <h1><i class="icon-file-alt"></i> Dynamic Table</h1>
-                        <h4>Dynamic tables by DataTables</h4>
+                        <h1><i class="icon-file-alt"></i> Privilegios</h1>
+                        <h4>Mantenimiento de Permisos</h4>
                     </div>
                 </div>
                 <!-- END Page Title -->
@@ -82,7 +81,7 @@
                             <a href="index.html">Home</a>
                             <span class="divider"><i class="icon-angle-right"></i></span>
                         </li>
-                        <li class="active">Dynamic Table</li>
+                        <li class="active">Privilegios</li>
                     </ul>
                 </div>
                 <!-- END Breadcrumb -->
@@ -92,7 +91,7 @@
                     <div class="span12">
                         <div class="box">
                             <div class="box-title">
-                                <h3><i class="icon-table"></i> Dynamic Table</h3>
+                                <h3><i class="icon-table"></i> Lista de privilegios</h3>
                                 <div class="box-tool">
                                     <a data-action="collapse" href="#"><i class="icon-chevron-up"></i></a>
                                     <a data-action="close" href="#"><i class="icon-remove"></i></a>
@@ -101,14 +100,12 @@
                             <div class="box-content">
                                 <div class="btn-toolbar pull-right clearfix">
                                     <div class="btn-group">
-                                        <a class="btn btn-circle show-tooltip" title="Add new record" href="<?php echo "$this->baseUrl" ?>/permisos/add"><i class="icon-plus"></i></a>
-                                        <a class="btn btn-circle show-tooltip" title="Edit selected" href="#"><i class="icon-edit"></i></a>
-                                        <a class="btn btn-circle show-tooltip" title="Delete selected" href="#"><i class="icon-trash"></i></a>
+                                        <a class="btn btn-circle show-tooltip" title="Nuevo permiso" href="<?php echo "$this->baseUrl" ?>/permisos/add"><i class="icon-plus"></i></a>
                                     </div>
                                     <div class="btn-group">
-                                        <a class="btn btn-circle show-tooltip" title="Print" href="#"><i class="icon-print"></i></a>
-                                        <a class="btn btn-circle show-tooltip" title="Export to PDF" href="#"><i class="icon-file-text-alt"></i></a>
-                                        <a class="btn btn-circle show-tooltip" title="Export to Exel" href="#"><i class="icon-table"></i></a>
+                                        <a class="btn btn-circle show-tooltip" title="Imprimir" href="#"><i class="icon-print"></i></a>
+                                        <a class="btn btn-circle show-tooltip" title="Exportar PDF" href="#"><i class="icon-file-text-alt"></i></a>
+                                        <a class="btn btn-circle show-tooltip" title="Exportar Excel" href="#"><i class="icon-table"></i></a>
                                     </div>
                                     <div class="btn-group">
                                         <a class="btn btn-circle show-tooltip" title="Refresh" href="#"><i class="icon-repeat"></i></a>
@@ -121,7 +118,7 @@
             <th>rol</th>
             <th>recurso</th>
             <th>persmiso</th>
-            <th style="width:100px">Action</th>
+            <th style="width:100px">Accion</th>
         </tr>
     </thead>
     <tbody>
@@ -154,15 +151,6 @@
     </div>                
                 
                 
-                <!-- END Main Content -->
-                
-                <footer>
-                    <p>2013 © FLATY Admin Template.</p>
-                </footer>
-
-                <a id="btn-scrollup" class="btn btn-circle btn-large" href="#"><i class="icon-chevron-up"></i></a>
-            </div>
-            <!-- END Content -->
             
             
         <!--page specific plugin scripts-->
