--- a/application/views/scripts/proveedor/index.phtml
+++ b/application/views/scripts/proveedor/index.phtml
@@ -25,7 +25,7 @@
                 ],
                 iDisplayLength: 10,
                 oLanguage: {
-                    sLengthMenu: "_MENU_ Records per page",
+                    sLengthMenu: "_MENU_ Registros por pagina",
                     sInfo: "_START_ - _END_ of _TOTAL_",
                     sInfoEmpty: "0 - 0 of 0",
                     oPaginate: {
@@ -78,8 +78,8 @@
                 <!-- BEGIN Page Title -->
                 <div class="page-title">
                     <div>
-                        <h1><i class="icon-file-alt"></i> Dynamic Table</h1>
-                        <h4>Dynamic tables by DataTables</h4>
+                        <h1><i class="icon-file-alt"></i> Proveedores</h1>
+                        <h4>Mantenimiento de Proveedores</h4>
                     </div>
                 </div>
                 <!-- END Page Title -->
@@ -89,10 +89,10 @@
                     <ul class="breadcrumb">
                         <li>
                             <i class="icon-home"></i>
-                            <a href="index.html">Home</a>
+                            <a href="<?php echo $this->baseUrl ?>">Home</a>
                             <span class="divider"><i class="icon-angle-right"></i></span>
                         </li>
-                        <li class="active">Dynamic Table</li>
+                        <li class="active">Proveedor</li>
                     </ul>
                 </div>
                 <!-- END Breadcrumb -->
@@ -102,7 +102,7 @@
                     <div class="span12">
                         <div class="box">
                             <div class="box-title">
-                                <h3><i class="icon-table"></i> Dynamic Table</h3>
+                                <h3><i class="icon-table"></i> Lista de Proveedores</h3>
                                 <div class="box-tool">
                                     <a data-action="collapse" href="#"><i class="icon-chevron-up"></i></a>
                                     <a data-action="close" href="#"><i class="icon-remove"></i></a>
@@ -111,14 +111,12 @@
                             <div class="box-content">
                                 <div class="btn-toolbar pull-right clearfix">
                                     <div class="btn-group">
-                                        <a class="btn btn-circle show-tooltip" title="Add new record" href="<?php echo "$this->baseUrl" ?>/proveedor/add"><i class="icon-plus"></i></a>
-                                        <a class="btn btn-circle show-tooltip" title="Edit selected" href="#"><i class="icon-edit"></i></a>
-                                        <a class="btn btn-circle show-tooltip" title="Delete selected" href="#"><i class="icon-trash"></i></a>
+                                        <a class="btn btn-circle show-tooltip" title="Nuevo proveedor" href="<?php echo "$this->baseUrl" ?>/proveedor/add"><i class="icon-plus"></i></a>
                                     </div>
                                     <div class="btn-group">
-                                        <a class="btn btn-circle show-tooltip" title="Print" href="#"><i class="icon-print"></i></a>
-                                        <a class="btn btn-circle show-tooltip" title="Export to PDF" href="#"><i class="icon-file-text-alt"></i></a>
-                                        <a class="btn btn-circle show-tooltip" title="Export to Exel" href="#"><i class="icon-table"></i></a>
+                                        <a class="btn btn-circle show-tooltip" title="Imprimir" href="#"><i class="icon-print"></i></a>
+                                        <a class="btn btn-circle show-tooltip" title="Exportar PDF" href="#"><i class="icon-file-text-alt"></i></a>
+                                        <a class="btn btn-circle show-tooltip" title="Exportar Excel" href="#"><i class="icon-table"></i></a>
                                     </div>
                                     <div class="btn-group">
                                         <a class="btn btn-circle show-tooltip" title="Refresh" href="#"><i class="icon-repeat"></i></a>
@@ -142,7 +140,7 @@
             <th>observacion</th>
             <th>user</th>
             <th>fecha</th>-->            
-            <th style="width:100px">Action</th>
+            <th style="width:100px">Accion</th>
         </tr>
     </thead>
     <tbody>
@@ -164,9 +162,6 @@
         <div class="modal-body">
             
             
-           
-            
-            
         </div>
         <div class="modal-footer">
             <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
@@ -175,16 +170,6 @@
     </div>                
                 
                 
-                <!-- END Main Content -->
-                
-                <footer>
-                    <p>2013 © FLATY Admin Template.</p>
-                </footer>
-
-                <a id="btn-scrollup" class="btn btn-circle btn-large" href="#"><i class="icon-chevron-up"></i></a>
-            </div>
-            <!-- END Content -->
-            
             
         <!--page specific plugin scripts-->
         <script type="text/javascript" src="<?php echo $this->baseUrl ?>/assets/data-tables/jquery.dataTables.js"></script>
